--- a/Reg_Ponto/Opçao_3/index.html
+++ b/Reg_Ponto/Opçao_3/index.html
@@ -5,68 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Folha de Ponto</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    .table-container {
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      border-radius: 10px;
-      overflow: hidden;
-    }
-    table {
-      border-collapse: separate;
-      border-spacing: 0;
-      width: 100%;
-    }
-    th, td {
-      padding: 12px 16px;
-      text-align: center;
-    }
-    th {
-      background-color: #f5f5f5;
-      color: #333;
-      font-weight: 600;
-    }
-    tr {
-      background-color: #fff;
-      transition: background-color 0.3s ease;
-    }
-    tr:hover {
-      background-color: #f7fafc;
-    }
-    button {
-      transition: background-color 0.3s ease, transform 0.2s ease;
-    }
-    button:hover {
-      transform: scale(1.05);
-    }
-    .btn-green {
-      background-color: #38a169;
-      color: white;
-    }
-    .btn-yellow {
-      background-color: #fbbf24;
-      color: white;
-    }
-    .btn-blue {
-      background-color: #3b82f6;
-      color: white;
-    }
-    .btn-red {
-      background-color: #ef4444;
-      color: white;
-    }
-    .btn-edit, .btn-delete {
-      color: #3b82f6;
-      text-decoration: underline;
-    }
-    .btn-edit:hover {
-      color: #1d4ed8;
-    }
-    .btn-delete:hover {
-      color: #dc2626;
-    }
+  <link rel="stylesheet" href="style.css">
   </style>
 </head>
 <body class="bg-gray-50 p-6 flex items-center justify-center min-h-screen">
@@ -106,88 +45,6 @@
     </div>
   </div>
 
-  <script>
-    const funcionarios = [
-      { codigo: '001', nome: 'João Silva' },
-      { codigo: '002', nome: 'Maria Souza' },
-      { codigo: '003', nome: 'Carlos Pereira' }
-    ];
-
-    const registros = JSON.parse(localStorage.getItem('pontos')) || [];
-
-    document.getElementById('codigo').addEventListener('input', (e) => {
-      const codigo = e.target.value;
-      const funcionario = funcionarios.find(f => f.codigo === codigo);
-      const nomeField = document.getElementById('nome');
-
-      if (funcionario) {
-        nomeField.value = funcionario.nome;
-      } else {
-        nomeField.value = '';
-      }
-    });
-
-    function registrar(tipo) {
-      const codigo = document.getElementById('codigo').value;
-      const nome = document.getElementById('nome').value;
-      const data = document.getElementById('data').value;
-      if (!codigo || !nome || !data) return alert("Preencha código, nome e data.");
-
-      let registro = registros.find(r => r.codigo === codigo && r.data === data);
-      if (!registro) {
-        registro = { codigo, nome, data, entrada: '', saidaAlmoco: '', voltaAlmoco: '', saida: '' };
-        registros.push(registro);
-      }
-      const horaAtual = new Date().toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' });
-      registro[tipo] = horaAtual;
-      localStorage.setItem('pontos', JSON.stringify(registros));
-      exibirRegistros();
-    }
-
-    function exibirRegistros() {
-      const tbody = document.getElementById('registros');
-      tbody.innerHTML = '';
-      registros.forEach((r, index) => {
-        tbody.innerHTML += `
-          <tr>
-            <td>${r.codigo}</td>
-            <td>${r.nome}</td>
-            <td>${r.data}</td>
-            <td>${r.entrada}</td>
-            <td>${r.saidaAlmoco} / ${r.voltaAlmoco}</td>
-            <td>${r.saida}</td>
-            <td>
-              <button onclick="editarRegistro(${index})" class="btn-edit">Editar</button>
-            </td>
-            <td>
-              <button onclick="excluirRegistro(${index})" class="btn-delete">Excluir</button>
-            </td>
-          </tr>
-        `;
-      });
-    }
-
-    function editarRegistro(index) {
-      const novoRegistro = { ...registros[index] };
-      const campos = ['entrada', 'saidaAlmoco', 'voltaAlmoco', 'saida'];
-      campos.forEach(campo => {
-        const novoValor = prompt(`Editar ${campo} (HH:MM)`, novoRegistro[campo]);
-        if (novoValor !== null) novoRegistro[campo] = novoValor;
-      });
-      registros[index] = novoRegistro;
-      localStorage.setItem('pontos', JSON.stringify(registros));
-      exibirRegistros();
-    }
-
-    function excluirRegistro(index) {
-      if (confirm("Tem certeza que deseja excluir este registro?")) {
-        registros.splice(index, 1);
-        localStorage.setItem('pontos', JSON.stringify(registros));
-        exibirRegistros();
-      }
-    }
-
-    window.onload = exibirRegistros;
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
