--- a/Reg_Ponto/Ponto_Web/index.html
+++ b/Reg_Ponto/Ponto_Web/index.html
@@ -42,11 +42,10 @@
             <th>Excluir</th> 
           </tr>
         </thead>
-        <tbody id="registros"></tbody> <!-- Corpo da tabela que será preenchido com os registros via JS -->
+        <tbody id="registros"></tbody>
       </table>
     </div>
   </div>
-  <!-- Importa o script JavaScript com a lógica de funcionamento -->
   <script src="script.js"></script>
 </body>
 </html>
