--- a/Reg_Ponto/Ponto_Web/index.html
+++ b/Reg_Ponto/Ponto_Web/index.html
@@ -21,8 +21,8 @@
     <!-- Botões de registrar horário -->
     <div class="grid grid-cols-2 gap-4 mt-6">
       <button onclick="registrar('entrada')" class="btn-green py-3 rounded-lg text-lg font-semibold hover:bg-green-600">Entrada</button> 
-      <button onclick="registrar('saidaAlmoco')" class="btn-yellow py-3 rounded-lg text-lg font-semibold hover:bg-yellow-600">Saída Intervalo</button> 
-      <button onclick="registrar('voltaAlmoco')" class="btn-blue py-3 rounded-lg text-lg font-semibold hover:bg-blue-600">Volta Intervalo</button> 
+      <button onclick="registrar('saidaIntervalo')" class="btn-yellow py-3 rounded-lg text-lg font-semibold hover:bg-yellow-600">Saída Intervalo</button> 
+      <button onclick="registrar('voltaIntervalo')" class="btn-blue py-3 rounded-lg text-lg font-semibold hover:bg-blue-600">Volta Intervalo</button> 
       <button onclick="registrar('saida')" class="btn-red py-3 rounded-lg text-lg font-semibold hover:bg-red-600">Saída</button> 
     </div>
     <!-- Título da tabela de registros -->
