--- a/Reg_Ponto/Ponto_Web/index.html
+++ b/Reg_Ponto/Ponto_Web/index.html
@@ -1,40 +1,52 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Calculadora Simples</title>
-<!-- Carrega o arquivo CSS para estilizar a calculadora -->
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Calculadora</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-<div class="calculadora">
-<!-- Visor da calculadora -->
-<input type="text" id="visor" readonly>
-<!-- Botões da calculadora -->
-<div class="botoes">
-<button onclick="limpar()">C</button>
-<button onclick="apagar()">←</button>
-<button onclick="adicionar('%')">%</button>
-<button class="operador" onclick="adicionar('/')">/</button>
-<button onclick="adicionar('7')">7</button>
-<button onclick="adicionar('8')">8</button>
-<button onclick="adicionar('9')">9</button>
-<button class="operador" onclick="adicionar('*')">*</button>
-<button onclick="adicionar('4')">4</button>
-<button onclick="adicionar('5')">5</button>
-<button onclick="adicionar('6')">6</button>
-<button class="operador" onclick="adicionar('-')">-</button>
-<button onclick="adicionar('1')">1</button>
-<button onclick="adicionar('2')">2</button>
-<button onclick="adicionar('3')">3</button>
-<button class="operador" onclick="adicionar('+')">+</button>
-<button onclick="adicionar('0')">0</button>
-<button onclick="adicionar('.')">.</button>
-<button onclick="calcular()" class="operador" style="grid-column: span 2;">=</button>
-</div>
-</div>
-<!-- Carrega o arquivo JS para as funções da calculadora -->
-<script src="script.js" defer></script>
+<body class="bg-gray-300 flex items-center justify-center min-h-screen">
+
+  <div class="bg-gray-800 p-4 rounded-lg shadow-lg w-64">
+    <!-- Display -->
+    <input
+      id="resultado"
+      type="text"
+      class="w-full text-right text-2xl p-3 bg-gray-100 border border-gray-400 rounded mb-4"
+      placeholder="0"
+      disabled
+    />
+
+    <!-- Teclado da calculadora -->
+    <div class="grid grid-cols-4 gap-2">
+      <!-- Primeira linha -->
+      <button onclick="calcular('acao', 'c')" class="col-span-2 bg-red-500 text-white p-4 rounded-lg text-lg">C</button>
+      <button onclick="calcular('acao', '/')" class="bg-gray-700 text-white p-4 rounded-lg text-lg">/</button>
+      <button onclick="calcular('acao', '*')" class="bg-gray-700 text-white p-4 rounded-lg text-lg">×</button>
+
+      <!-- Segunda linha -->
+      <button onclick="calcular('valor', 7)" class="bg-gray-700 text-white p-4 rounded-lg text-lg">7</button>
+      <button onclick="calcular('valor', 8)" class="bg-gray-700 text-white p-4 rounded-lg text-lg">8</button>
+      <button onclick="calcular('valor', 9)" class="bg-gray-700 text-white p-4 rounded-lg text-lg">9</button>
+      <button onclick="calcular('acao', '-')" class="bg-gray-700 text-white p-4 rounded-lg text-lg">-</button>
+
+      <!-- Terceira linha -->
+      <button onclick="calcular('valor', 4)" class="bg-gray-700 text-white p-4 rounded-lg text-lg">4</button>
+      <button onclick="calcular('valor', 5)" class="bg-gray-700 text-white p-4 rounded-lg text-lg">5</button>
+      <button onclick="calcular('valor', 6)" class="bg-gray-700 text-white p-4 rounded-lg text-lg">6</button>
+      <button onclick="calcular('acao', '+')" class="bg-gray-700 text-white p-4 rounded-lg text-lg">+</button>
+
+      <!-- Quarta linha -->
+      <button onclick="calcular('valor', 1)" class="bg-gray-700 text-white p-4 rounded-lg text-lg">1</button>
+      <button onclick="calcular('valor', 2)" class="bg-gray-700 text-white p-4 rounded-lg text-lg">2</button>
+      <button onclick="calcular('valor', 3)" class="bg-gray-700 text-white p-4 rounded-lg text-lg">3</button>
+      <button onclick="calcular('acao', '=')" class="row-span-2 bg-green-500 text-white p-4 rounded-lg text-lg flex items-center justify-center">=</button>
+
+      <!-- Última linha -->
+      <button onclick="calcular('valor', 0)" class="col-span-2 bg-gray-700 text-white p-4 rounded-lg text-lg">0</button>
+      <button onclick="calcular('acao', '.')" class="bg-gray-700 text-white p-4 rounded-lg text-lg">.</button>
+    </div>
+  </div>
 </body>
 </html>
