--- a/Reg_Ponto/Ponto_Web/index.html
+++ b/Reg_Ponto/Ponto_Web/index.html
@@ -14,26 +14,28 @@
     <div id="display" class="bg-gray-100 p-4 mb-4 rounded text-right font-mono text-lg h-16 overflow-y-auto"></div>
     <div class="grid grid-cols-4 gap-3">
       <!-- Primeira linha -->
-      <button class="bg-gray-300 py-2 rounded font-bold">7</button>
-      <button class="bg-gray-300 py-2 rounded font-bold">8</button>
       <button class="bg-gray-300 py-2 rounded font-bold">9</button>
+      <button class="bg-gray-300 py-2 rounded font-bold">C</button>
+      <button class="bg-gray-300 py-2 rounded font-bold">-</button>
       <button class="bg-green-500 text-white py-2 rounded">Entrada</button>
 
       <!-- Segunda linha -->
-      <button class="bg-gray-300 py-2 rounded font-bold">4</button>
-      <button class="bg-gray-300 py-2 rounded font-bold">5</button>
+      <button class="bg-gray-300 py-2 rounded font-bold">8</button>
+      <button class="bg-gray-300 py-2 rounded font-bold">7</button>
       <button class="bg-gray-300 py-2 rounded font-bold">6</button>
       <button class="bg-yellow-500 text-white py-2 rounded">Saída Intervalo</button>
 
       <!-- Terceira linha -->
-      <button class="bg-gray-300 py-2 rounded font-bold">1</button>
-      <button class="bg-gray-300 py-2 rounded font-bold">2</button>
+      <button class="bg-gray-300 py-2 rounded font-bold">5</button>
+      <button class="bg-gray-300 py-2 rounded font-bold">4</button>
       <button class="bg-gray-300 py-2 rounded font-bold">3</button>
       <button class="bg-blue-500 text-white py-2 rounded">Retorno Intervalo</button>
 
       <!-- Quarta linha -->
-      <button class="bg-gray-300 py-2 rounded font-bold col-span-2">0</button>
-      <button class="bg-red-500 text-white py-2 rounded col-span-2">Saída</button>
+      <button class="bg-gray-300 py-2 rounded font-bold">2</button>
+      <button class="bg-gray-300 py-2 rounded font-bold">1</button>
+      <button class="bg-gray-300 py-2 rounded font-bold">0</button>
+      <button class="bg-red-500 text-white py-2 rounded">Saída</button>
     </div>
   </div>
 </body>
