--- a/Reg_Ponto/Ponto_Web/index.html
+++ b/Reg_Ponto/Ponto_Web/index.html
@@ -16,7 +16,7 @@
       <!-- Primeira linha -->
       <button class="bg-gray-300 py-2 rounded font-bold">9</button>
       <button class="bg-gray-300 py-2 rounded font-bold">C</button>
-      <button class="bg-gray-300 py-2 rounded font-bold">-</button>
+      <button class="bg-gray-300 py-2 rounded font-bold">⌫</button>
       <button class="bg-green-500 text-white py-2 rounded">Entrada</button>
 
       <!-- Segunda linha -->
